# Default-CMake

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: TestLib.h
lib/: CMakeLists.txt  TestLib.cpp
